--- a/app/Resources/views/project/edit.html.twig
+++ b/app/Resources/views/project/edit.html.twig
@@ -14,7 +14,7 @@
             {{ form_end(edit_form) }}
             <div class="row">
                 <div class="col-md-4">
-                    <input id="button_edit" value="Обратно към заявките" onclick="location.href='{{ path('zadanie_index') }}'"><div class="back_icon"></div>
+                    <input id="button_edit" value="Обратно към заявките" onclick="location.href='{{ path('project_index') }}'"><div class="back_icon"></div>
                 </div>
             </div>
         </div>
