Fixed bugs, added functionallity and spell fixes

--- a/app/Resources/views/comments/index.html.twig
+++ b/app/Resources/views/comments/index.html.twig
@@ -23,7 +23,7 @@
                 <td>{{ comment.content }}</td>
                 <td>{{ comment.madeBy }}</td>
                 <td>{{ comment.creatorRole }}</td>
-                <td>{{ comment.zadanieID }}</td>
+                <td>{{ comment.projectID }}</td>
                 <td>
                     <ul>
                         <li>
