--- a/app/Resources/views/comments/show.html.twig
+++ b/app/Resources/views/comments/show.html.twig
@@ -26,8 +26,8 @@
                 <td>{{ comment.creatorRole }}</td>
             </tr>
             <tr>
-                <th>Zadanieid</th>
-                <td>{{ comment.zadanieID }}</td>
+                <th>projectID</th>
+                <td>{{ comment.projectID }}</td>
             </tr>
         </tbody>
     </table>
