--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -83,16 +83,11 @@ td, th, tr{
 #index td.comments{
 	background:#e6e6e6;
 	border-bottom: 6px solid #323232;
+    word-break: break-word;
 }
 .description{
 	font-size: 22px;
-    white-space: pre-wrap;
-    white-space: pre-line;
-    white-space: -pre-wrap;
-    white-space: -o-pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -hp-pre-wrap;
-    word-break: break-all;
+    word-break: break-word;
     table-layout: fixed;
 }
 .overflow{
@@ -629,6 +624,7 @@ input#button_delete:hover, #reject:hover, input#archive:hover, #button_edit:hove
 .text-field{
     margin: 10px 0px 10px 0px;
 	padding: 5px;
+    word-break: break-word;
 }
 .login_register{
     width: 500px;
@@ -856,30 +852,12 @@ select{
 }
 .more{
 	width: 28%;
-    /* white-space: pre; */
-    white-space: pre-wrap;
-    white-space: pre-line;
-    white-space: -pre-wrap;
-    white-space: -o-pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -hp-pre-wrap;
-    /* word-wrap: break-word; */
-    /* word-wrap: break-word; */
-    word-break: break-all;
+    word-break: break-word;
     table-layout: fixed;
 }
 .type{
 	width: 11%;
-    /* white-space: pre; */
-    white-space: pre-wrap;
-    white-space: pre-line;
-    white-space: -pre-wrap;
-    white-space: -o-pre-wrap;
-    white-space: -moz-pre-wrap;
-    white-space: -hp-pre-wrap;
-    /* word-wrap: break-word; */
-    /* word-wrap: break-word; */
-    word-break: break-all;
+    word-break: break-word;
     table-layout: fixed;
 }
 .date{
