--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -511,9 +511,12 @@ nav a:active, nav a:hover{
 	width:100%;
 }
 
-input#button_delete, #reject{
+input#button_delete, #reject, #button_submit_popup{
     background-color: #ee5454;
     border-bottom: 2px solid #ff1212;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
     border-radius: 0;
     color: #f4f4f4;
     padding: 10px 10px 10px 40px;
@@ -531,7 +534,7 @@ input#archive{
 	width: 100%;
 	opacity:0.8;
 }
-#button_edit, #button_create{
+#button_edit, #button_create, #button_cancel_popup{
     background-color: #9caee7;
     border-bottom: 2px solid #8195d3;
 	border-top:0;
@@ -877,14 +880,45 @@ select{
 	padding-bottom: 15px;
 }
 .popup {
-	background: rgba(100, 100, 100, 0.6);
-	position: fixed;
-	display: none;
-	z-index: 5000;
-	height: 100%;
-	width: 100%;
-	left: 0;
-	top: 0;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
-
-
+.popup-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 500px;
+}
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+.popup textarea{
+	width:100%;
+	height:100px;
+}
+.invalid {
+    background: red;
+    color: white;
+}
+.error {
+    color: red;
+}
