--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -65,36 +65,18 @@
                 </tr>
 			    <tr id="actions" class="{{ project.class }}">
 				    <td colspan = "10" id="buttons" style="padding: 10px 0px 0px 0px;">
-				    {% if project.isOver and app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
+				    {% if project.isOver and (app.user.type == "LittleBoss" or app.user.type == "Boss")  %}
 
 
 					{% elseif app.user.type == "LittleBoss" or app.user.type == "Boss"  %}
-                        <form action="{{ path('project_update', { 'id': project.id }) }}" method="post"  id="buttons_form" name='buttons_form'>
+                        <form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
 				            {% if project.forApproval or project.isApproved %}
                             <div class="col-md-2">
                                 <input type="submit" id="approve" name="approve" value="Одобрявам"><div class="approve_icon"></div>
                             </div>
-                            <div class="col-md-2">
-                                <input id="reject" name="reject" value="Отхвърлям"><div class="reject_icon"></div>
-                            </div>
-								<div id="mypopup" class="popup">
-									<div class="popup-content">
-										<span class="close">&times;</span>
-										<p>Сигурни ли сте, че искате да отхвърлите заявката?</p>
-                                        <p>Напишете причина.</p>
-										<textarea required data-required-message="Name is required."></textarea>
-										<div id="name-error" class="error"></div>
-										<div style="height: 40px; margin-top: 20px;">
-											<div class="col-md-2">
-											<button type="button" id="button_cancel_popup">Не</button><div class="reject_icon"></div>
-											</div>
-											<div class="col-md-2">
-											<button type="submit" id="button_submit_popup">Да</button><div class="approve_icon"></div>    
-											</div>
-										</div>
-									</div>
-								</div>							
+							
 							{% else %}
+
                             <div class="col-md-2">
                                 <input type="submit" id="hold" name="hold" value="На изчакване"><div class="hold_icon"></div>
                             </div>
@@ -111,6 +93,28 @@
 					{% endif %}
 					
 					    </form>
+							<form action="{{ path('project_update', { 'id': project.id }) }}" method="post">
+								<div class="col-md-2">
+									<input id="rejectPopup" name="rejectPopup" value="Отхвърлям" onclick="btnShowPopup()"><div class="reject_icon"></div>
+								</div>
+								<div id="mypopup" class="popup">
+									<div class="popup-content">
+										<span class="close" onclick="btnHidePopup()">&times;</span>
+										<p>Сигурни ли сте, че искате да отхвърлите заявката?</p>
+                                        <p>Напишете причина.</p>
+										<textarea></textarea>
+										<div id="name-error" class="error"></div>
+										<div style="height: 40px; margin-top: 20px;">
+											<div class="col-md-2">
+											<button type="button" id="button_cancel_popup" onclick="btnHidePopup()">Не</button><div class="reject_icon"></div>
+											</div>
+											<div class="col-md-2">
+											<input type="submit" id="reject" name="reject" value="Да"><div class="approve_icon"></div>    
+											</div>
+										</div>
+									</div>
+								</div>
+                            </form>	
                              <div>
 								<div class="col-md-2">
 									<input id="button_details" value="Детайли" onclick="location.href='{{ path('project_show', { 'id': project.id }) }}'"/><div class="details_icon"></div>
