--- a/app/Resources/views/project/index.html.twig
+++ b/app/Resources/views/project/index.html.twig
@@ -103,7 +103,7 @@
 										<span class="close" onclick="btnHidePopup()">&times;</span>
 										<p>Сигурни ли сте, че искате да отхвърлите заявката?</p>
                                         <p>Напишете причина.</p>
-										<textarea></textarea>
+										<textarea id="comment_reject"></textarea>
 										<div id="name-error" class="error"></div>
 										<div style="height: 40px; margin-top: 20px;">
 											<div class="col-md-2">
